DDBB a UPDATE, solucionados los errores